--- a/sfc/v-model/base.less
+++ b/sfc/v-model/base.less
@@ -10,8 +10,7 @@
   }
   .receive {
     padding-left: 1em;
-    &::before {
-      content: '{{ $attrs.value }}: ';
+    .label {
       font-size: 0.6em;
       color: darkblue;
       font-weight: 600;
